--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html{
     scroll-behavior: smooth;
 }
 
-
 body{
     background: #f3e8d0;  /*entire background*/
     color: #823D32; /*entire font*/
@@ -16,59 +15,74 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    /* background-image: url(images_new/background.png); */
+    background-image: url(images_new/background.png);
     background-size: cover;
     background-position: center;
 }
 .container{
     padding: 10px 10%;
 }
-
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
+/* ------------------------logo----------- */
 .logo{
     width: 200px;
+    animation: fade 5s infinite;
 }
-
+@keyframes fade {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5; 
+    }
+}
+/* -------------------------------------------- */
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin: -10px 4px;
 }
-
 nav ul li a{
-    color: #823D32;  /*severl general buttons on the top */
+    background-color: #823D32;
+    color: #f3e8d0;  /*severl general buttons on the top */
     text-decoration:none;
-    font-size: 23px;
+    font-size: 16 px;
     position: relative;
     font-weight: 600;
+    display:block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #823D32;
+    padding: 14px 30px;
+    border-radius: 30px;
+    word-spacing: 100px;
+    text-decoration: none;  
+    transition: transform 0.5s;
 }
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #EF852F; /* Click and change line*/
-    position: absolute;
-    left:0;
-    bottom: -6px;
-    transition: 0.5s;
-}
-nav ul li a:hover::after{
-    width:100%;
+nav ul li a:hover{
+    background: #823D32;
+    transform: translateY(-10px);
 }
 .header-text{
-    margin-top: 9%;  /* blank above the name*/
+    margin-top: 7%;  /* blank above the name*/
     font-size: 30px;   /*finance graduate*/
-    font-weight: 300;
+    font-weight: 540;
+}
+.finance-text {
+    color:#823D32
+    tansition: 0.5s ease-in-out;
+}
+.finance-text:hover {
+    color: #EF852F;
 }
 .header-text h1{
     font-size: 50px;  /*name */
-    margin-top: 20px;/*blank between finance graduate and name*/
+    margin-top: 13px;/*blank between finance graduate and name*/
 }
 .header-text h1 span{  /* Qianqian*/
     color: #ef580c;
@@ -119,7 +133,7 @@ nav ul li a:hover::after{
 }
 .about-col-1 img{
     width: 100%;
-    border-radius: 15px;
+    border-radius: 30px;
 }
 .about-col-2{
     flex-basis: 60%;
@@ -189,7 +203,7 @@ nav ul li a:hover::after{
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
-    border-radius: 10px;
+    border-radius: 30px;
     transition: background 0.5s, transform 0.5s;
 }
 .services-list div i{
@@ -223,13 +237,13 @@ nav ul li a:hover::after{
     margin-top: 50px;
 }
 .work{
-    border-radius: 10px;
+    border-radius: 30px;
     position: relative;
     overflow: hidden;
 }
 .work img{
     width: 100%;
-    border-radius: 10px;
+    border-radius: 30px;
     display: block;
     transition: transform 0.5s;
 }
@@ -237,7 +251,7 @@ nav ul li a:hover::after{
     width: 100%;
     height: 0%;
     background: linear-gradient(rgba(0,0,0,0.6),#FFCC80);
-    border-radius: 10px;
+    border-radius: 30px;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -279,16 +293,19 @@ nav ul li a:hover::after{
     width: fit-content;
     border: 1px solid #823D32;
     padding: 14px 50px;
-    border-radius: 6px;
+    border-radius: 30px;
     text-decoration: none;
     color: #f3e8d0;
-    background: #823D32
-    /* transition: background 0.5s; */
+    background: #823D32;
+    transition: transform 0.5s;
 }
 .btn:hover{
     background: #823D32;
+    transform: translateY(-10px);
 }
-/* -----------------contact------------- */
+
+
+/* -----------------contact--------------------- */
 .contact-left{
     flex-basis: 35%;
 }
