--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ nav ul li a:hover{
 .layer{
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0,0,0,0.6),#FFCC80);
+    background: linear-gradient(rgba(243, 188, 70, 0.3),#FFCC80);
     border-radius: 30px;
     position: absolute;
     left: 0;
@@ -263,10 +263,11 @@ nav ul li a:hover{
     padding: 0 40px;
     text-align: center;
     font-size: 14px;
+    font-weight: 600;
     transition: height 0.5s;
 }
 .layer h3{
-    font-weight: 500;
+    font-weight: 800;
     margin-bottom: 20px;
 }
 .layer a{
