--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images_new/background.png);
+    background-image: url(images_new/background.jpg);
     background-size: cover;
     background-position: center;
 }
