--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
+    background-color: #f3e8d0;
     background-image: url(images_new/background.jpg);
     background-size: cover;
     background-position: center;
@@ -514,7 +515,7 @@ nav .fas{
         font-weight: 500;
         margin-top: 20px;
         margin-right: 40px;
-        text-align: justify;
+        text-align: left;
     }  
 
     .tab-links{
