--- a/style.css
+++ b/style.css
@@ -520,8 +520,14 @@ nav .fas{
         margin-top: 20px;
         margin-right: 40px;
         text-align: left;
+        margin: 15px 0;
     }  
-
+    .button-container {
+        flex-direction: column;
+    }
+    .btn {
+        width: 100%;
+    }
     .tab-links{
         font-size: 16px;
         margin-right: 20px;
