--- a/style.css
+++ b/style.css
@@ -502,6 +502,9 @@ nav .fas{
     .about-col-1, .about-col-2{
         flex-basis: 100%;
     }
+    .about-col-2 {
+        flex-basis: 60%; /* Adjust for larger screens */
+    }
     .about-col-1{
         margin-bottom: 30px;
     }
