--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@ nav ul li a:hover{
     flex-basis: 60%;
 }
 .about-col-2 p {    /* the content of about me*/
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 18px;
+    line-height: 1.25;
     font-weight: 500;
     margin-top: 16px;
     text-align: justify;
@@ -200,7 +200,7 @@ nav ul li a:hover{
     color: #823D32;  /* job content*/
     margin: 15px 0;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 18px;
 }
 .tab-contents ul li span{
     color:#ef580c;   /* job title*/
@@ -209,8 +209,8 @@ nav ul li a:hover{
 }
 .tab-contents{
     display: none;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 18px;
+    line-height: 1.25;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
 }
@@ -219,20 +219,21 @@ nav ul li a:hover{
     opacity: 1;
 }
 
-/* ------------------Services-------------- */
+/* ------------------Interests-------------- */
 #services{
     padding: 30px 0;
     margin-top: 40px;
+    margin-bottom: 80px;
 }
 .services-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 40px;
-    margin-top: 50px;
+    margin-top: 50px;   /*black below the "My Interest"*/
 }
 .services-list div{
     background: #FFCC80;
-    padding: 40px;
+    padding: 10px;
     font-size: 15px;
     font-weight: 300;
     border-radius: 30px;
@@ -240,14 +241,33 @@ nav ul li a:hover{
     align-items: center;
     transition: background 0.5s, transform 0.5s;
 }
-.services-list div i{
-    font-size: 50px;
-    margin-bottom: 30px;
+.services-list div i{  /*logo */
+    font-size: 25px;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
-.services-list div h2{
-    font-size: 30px;
+.services-list div h2{ /*IT, human computer....*/
+    font-size: 18px;
     font-weight: 500;
     margin-bottom: 15px;
+}
+.tech-icon {
+    color: #a91f00; /* Example color for Technology icon */
+}
+.interaction-icon {
+    color: #00ab1f; /* Example color for Human-Computer Interaction icon */
+}
+.platform-icon {
+    color: #001260; /* Example color for Digital Platform icon */
+}
+.learning-icon {
+    color: #c10a6c; /* Example color for Experimental Learning icon */
+}
+.finance-icon {
+    color: #b37201; /* Example color for Financial Literacy icon */
+}
+.portfolio-icon {
+    color: #0ac19a; /* Example color for Portfolio Optimization icon */
 }
 .services-list div a{
     text-decoration: none;
@@ -265,9 +285,9 @@ nav ul li a:hover{
     padding: 50px 0;
 }
 .work-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     margin-top: 50px;
 }
 .work{
@@ -275,52 +295,51 @@ nav ul li a:hover{
     position: relative;
     overflow: hidden;
 }
-.work img{
+.work-content {
+    display: flex; /* Flexbox to align image and text */
+    position: relative;
     width: 100%;
+}
+.work img{
+    width: 300px;
+    height: auto;
     border-radius: 30px;
     display: block;
-    transition: transform 0.5s;
 }
-.layer{
-    width: 100%;
-    height: 0%;
-    background: linear-gradient(rgba(243, 188, 70, 0.3),#FFCC80);
-    border-radius: 30px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
+.layer {
+    background: linear-gradient(rgba(243, 188, 70, 0.3), #FFCC80);
+    border-radius: 30px 30px 30px 30px; /* Rounded corners on the right */
+    padding: 40px; /* Padding for the layer */
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    transition: height 0.5s;
+    justify-content: center; /* Center content vertically */
+    flex: 1;
 }
-.layer h3{
+.layer h3{   /*Course paper title*/
     font-weight: 800;
+    margin-top: -20px;
     margin-bottom: 20px;
+    font-size: 25px;
+}
+.layer p {
+    margin-bottom: 10px; /* Margin for description */
+    line-height: 1.5;
+    font-size: 18px;
+    text-align: justify;
 }
 .layer a{
-    margin-top: 20px;
     color: #823D32;
     text-decoration: none;
     font-size: 18px;
-    line-height: 60px;
-    background: #823D32;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    text-align: center;
 }
-.work:hover img{
-    transform: scale(1.1);
+.work-description {
+    padding: 15px; /* Padding for the description section */
+    background-color: #f3e8d0; /* Background color for the description */
+    border-radius: 0 0 30px 30px; /* Rounded corners at the bottom */
+    border: 8px solid#FFCC80;
 }
 .work:hover .layer{
-    height: 100%;
+    height: auto;
 }
 .btn{
     display: block;
@@ -341,6 +360,9 @@ nav ul li a:hover{
 
 
 /* -----------------contact--------------------- */
+#contact {
+    margin-top: 120px; /* Increases space above the contact section */
+}
 .contact-left{
     flex-basis: 35%;
 }
