--- a/style.css
+++ b/style.css
@@ -158,8 +158,6 @@ nav ul li a:hover {
   display: flex;
   margin: 20px 0 40px;
   justify-content: flex-end;
-  margin-left: -10px;
-  margin-right: -100px;
 }
 @keyframes twinkle {
   0%,
@@ -564,30 +562,30 @@ nav .fas {
   }
 
   .tab-titles {   /*skills, experiencne, part time ... button */
-    text-align: left;
     font-size: 16px;
     margin-bottom: 8px;
+    align-items: flex-start;
   }
   .tab-titles .tab-links {
-    display: inline-block;
     font-size: 16px;
     padding: 6px 8px;
-    margin-left: 5px;
-    margin-bottom: 10px;
-    margin-bottom: 0px;
+    margin-left: -10px;
+    margin-bottom: 15px;
+    width: auto;
   }
-
   .tab-contents ul li {
-    list-style: none;
-    color: #823d32;
-    margin: 15px 0;
-    font-weight: 500;
     font-size: 16px;
-    margin-right: 20px;
+    margin: 5px 0;
     text-align: left;
   }
-
-  
+ 
+  .tab-contents ul li span {  /*consultant title*/
+    font-size: 16px;
+  }
+  .tab-contents {
+    display: none;
+    font-size: 10px; /*seem no use*/
+  }
   .contact-left,
   .contact-right {
     flex-basis: 100%;
